--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Playfair+Display:wght@600&family=Poppins:wght@500&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/631c8349cb.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h4 class="influencer">Influencer Products</h4>
+    </header>
+    <section class="flex-container">
+        <div class="width">
+            <h1 class="font-color1">Start Your Journey as </h1>
+            <h1 class="font-color1">Influencer</h1>
+        <p>Create a Website with Wix and Get Safe Website Hosting. Get Online Today with Wix! Wix is a Free Website Builder and a Secure Hosting Platform for Your Site. Market leaders. Customizable online store. Multiple payment methods. 1000s of free images.</p>
+        <a class="button-class" target="_blank" href="https://www.linkedin.com/in/munna-dhar-53a845228">Preebook Now  <i class="fas fa-arrow-right"></i></a>
+        <!-- <h4>Scroll dwon to get more </h4> -->
+
+        </div>
+        <div class="width">
+            <img src="images/main-camera.png" alt="" srcset="">
+
+        </div>
+        
+    </section>
 </body>
 </html>
