--- a/index.html
+++ b/index.html
@@ -30,5 +30,226 @@
         </div>
         
     </section>
+    <b><h1 class="center" >Populer Collection</h1></b>
+    <section>
+        <div class="equipment">
+            <div class="element">
+                <div class="element-picture">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="element-name">
+                   Flex Tripod
+                </div>
+                <div class="element-rate">$50.48
+
+                </div>
+                <div class="element-info">
+                    <div>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>  4.9</span>
+                    </div>
+                </div>
+                <p class="header-info">worldwide shifting</p>
+                <p class="header-info">available</p>
+                <p class="header-info">buyers prtection possible!</p>
+            </div>
+            <div class="element">
+                <div class="element-picture">
+                    <img src="images/mic.png" alt="">
+                </div>
+                <div class="element-name">
+                   microphone
+                </div>
+                <div class="element-rate">$120.25
+
+                </div>
+                <div class="element-info">
+                    <div>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>  4.9</span>
+                    </div>
+                </div>
+                <p class="header-info">worldwide shifting</p>
+                <p class="header-info">available</p>
+                <p class="header-info">buyers prtection possible!</p>
+            </div>
+            <div class="element">
+                <div class="element-picture">
+                    <img src="images/airpod.png" alt="">
+                </div>
+                <div class="element-name">
+                   Airbuds
+                </div>
+                <div class="element-rate">$100.00
+
+                </div>
+                <div class="element-info">
+                    <div>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>  4.9</span>
+                    </div>
+                </div>
+                <p class="header-info">worldwide shifting</p>
+                <p class="header-info">available</p>
+                <p class="header-info">buyers prtection possible!</p>
+            </div>
+            <div class="element">
+                <div class="element-picture">
+                    <img src="images/drone.png" alt="">
+                </div>
+                <div class="element-name">
+                   drone
+                </div>
+                <div class="element-rate">$980.25
+
+                </div>
+                <div class="element-info">
+                    <div>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>  4.9</span>
+                    </div>
+                </div>
+                <p class="header-info">worldwide shifting</p>
+                <p class="header-info">available</p>
+                <p class="header-info">buyers prtection possible!</p>
+            </div>
+            <div class="element">
+                <div class="element-picture">
+                    <img src="images/lights.png" alt="">
+                </div>
+                <div class="element-name">
+                   Light Setup
+                </div>
+                <div class="element-rate">$1200.00
+
+                </div>
+                <div class="element-info">
+                    <div>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>  4.9</span>
+                    </div>
+                </div>
+                <p class="header-info">worldwide shifting</p>
+                <p class="header-info">available</p>
+                <p class="header-info">buyers prtection possible!</p>
+            </div>
+            <div class="element">
+                <div class="element-picture">
+                    <img src="images/setup.png" alt="">
+                </div>
+                <div class="element-name">
+                   Photoshoot Set
+                </div>
+                <div class="element-rate">$820.40
+
+                </div>
+                <div class="element-info">
+                    <div>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>  4.9</span>
+                    </div>
+                </div>
+                <p class="header-info">worldwide shifting</p>
+                <p class="header-info">available</p>
+                <p class="header-info">buyers prtection possible!</p>
+            </div>
+            <div class="element">
+                <div class="element-picture">
+                    <img src="images/camera.png" alt="">
+                </div>
+                <div class="element-name">
+                   vlogging Camera
+                </div>
+                <div class="element-rate">$1880.80
+
+                </div>
+                <div class="element-info">
+                    <div>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>  4.9</span>
+                    </div>
+                </div>
+                <p class="header-info">worldwide shifting</p>
+                <p class="header-info">available</p>
+                <p class="header-info">buyers prtection possible!</p>
+            </div>
+            <div class="element">
+                <div class="element-picture">
+                    <img src="images/single-light.png" alt="">
+                </div>
+                <div class="element-name">
+                   Green Screen
+                </div>
+                <div class="element-rate">$25.48
+
+                </div>
+                <div class="element-info">
+                    <div>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>  4.9</span>
+                    </div>
+                </div>
+                <p class="header-info">worldwide shifting</p>
+                <p class="header-info">available</p>
+                <p class="header-info">buyers prtection possible!</p>
+            </div>
+            <div class="element">
+                <div class="element-picture">
+                    <img src="images/action.png" alt="">
+                </div>
+                <div class="element-name">
+                   Action Camera
+                </div>
+                <div class="element-rate">$380.00
+
+                </div>
+                <div class="element-info">
+                    <div>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>  4.9</span>
+                    </div>
+                </div>
+                <p class="header-info">worldwide shifting</p>
+                <p class="header-info">available</p>
+                <p class="header-info">buyers prtection possible!</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
